k8s/app/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic-deployment
spec:
  selector:
    matchLabels:
      app: petclinic-deployment
  template:
    metadata:
      labels:
        app: petclinic-deployment
    spec:
      containers:
        - name: petclinic
          image: springcommunity/spring-framework-petclinic:6.1.2
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
