k8s/app/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  selector:
    app: petclinic-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
